--- a/css/slider.css
+++ b/css/slider.css
@@ -25,7 +25,7 @@
   top: 50%;
   transform: translateY(-50%);
   float: right;
-  z-index: 4000;
+  z-index: 500;
   cursor: pointer;
 }
 
